src/lib_time_measurement/ppx/test/valid/test_addition_input.ml
let _ = (1 + 3) [@time.duration addition]
