src/lib_time_measurement/ppx/test/invalid/test_no_payload_input.ml
let _ = (0 [@time.duration])
